classDiagram
    class Pessoa {
        -Endereco endereco
        -String email
        -String[] telefones
    }

    class Fornecedor {
        -Integer id
        -String cnpj
        -String razaoSocial
        -String nomeFantasia
        -Compra[] pedidos
    }

    class ItemCompra {
        -Integer id_fornecedor
        -Produto produto
        -Integer quantidade
        -Double precoUnidade
        -Double subTotal
    }

    class Compra {
        -Integer id
        -ItemCompra[] itens
        -Date data
        -Double total
    }

    class Cliente {
        -Integer id
        -String cpf
        -String nome
        -Venda[] pedidos
    }

    class ItemVenda {
        -Integer id_cliente
        -Produto produto
        -Integer quantidade
        -Double precoUnidade
        -Double subTotal
    }

    class Venda {
        -Integer id
        -ItemVenda[] itens
        -Date data
        -Double total
    }

    %%-- seria interessante criar uma função autoCEP(String cep), mas teríamos de baixar as tabelas de CEP do IBGE --%%
    %%-- no caso essa função buscaria do CEP da pessoa e completaria automaticamente o Estado, Cidade, Bairro e Logradouro de Endereco  --%%
    class Endereco {
        -String cep
        -String logradouro
        -Integer numero
        -String complemento
        -String bairro
        -String cidade
        -String estado
    }

    Pessoa <|-- Fornecedor
    Pessoa <|-- Cliente

    Cliente "1" --> "0..*" Compra
    Compra "1" --> "1..*" ItemCompra

    Fornecedor "1" --> "0..*" Venda
    Venda "1" --> "1..*" ItemVenda

    